<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="77dp"
        android:layout_height="104dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/main_logo__cd"
        android:src="@drawable/detox_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_navto_actions"
        app:layout_constraintTop_toBottomOf="@id/main_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
